@@ -11,62 +11,36 @@
     </properties>
     <dependencies>
         <dependency>
+            <groupId>com.jfoenix</groupId>
+            <artifactId>jfoenix</artifactId>
+            <version>9.0.10</version>
+        </dependency>
+        <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
             <version>11.0.2</version>
-        </dependency>   
-        
-        <!--CORREOS-->   
-        <dependency>
-            <groupId>com.sun.activation</groupId>
-            <artifactId>jakarta.activation</artifactId>
-            <version>2.0.0</version>
-        </dependency>  
-        
-        <dependency>
-            <groupId>jakarta.activation</groupId>
-            <artifactId>jakarta.activation-api</artifactId>
-            <version>2.0.1</version>
         </dependency>
-        <!-- Thanks for using https://jar-download.com -->
-
-        
-        
-<!--        
-        <dependency>
-            <groupId>javax.activation</groupId>
-            <artifactId>activation</artifactId>
-            <version>1.1.1</version>
-        </dependency>-->
-                 
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
             <version>11.0.2</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/commons-lang/commons-lang -->
         <dependency>
-            <groupId>commons-lang</groupId>
-            <artifactId>commons-lang</artifactId>
-            <version>2.3</version>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-swing</artifactId>
+            <version>11.0.2</version>
         </dependency>
-        
-        <dependency>
-            <groupId>com.jfoenix</groupId>
-            <artifactId>jfoenix</artifactId>
-            <version>9.0.10</version>
-        </dependency>
-        
-        
-        <!-- https://mvnrepository.com/artifact/org.controlsfx/controlsfx -->
         <dependency>
             <groupId>org.controlsfx</groupId>
             <artifactId>controlsfx</artifactId>
             <version>11.1.0</version>
             <type>jar</type>
         </dependency>
-
-        
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.3</version>
+        </dependency>
         <!--WEB SERVICES REST-->
         <dependency>
             <groupId>jakarta.xml.bind</groupId>
@@ -77,7 +51,6 @@
             <groupId>org.glassfish.jersey.core</groupId>
             <artifactId>jersey-client</artifactId>
             <version>3.0.2</version>
-
         </dependency>
         <dependency>
             <groupId>org.glassfish.jersey.inject</groupId>
@@ -89,18 +62,33 @@
             <artifactId>jersey-media-json-binding</artifactId>
             <version>3.0.2</version>
         </dependency>
-
         <!--WEB SERVICES REST-->
         <dependency>
-            <groupId>org.openjfx</groupId>
-            <artifactId>javafx-swing</artifactId>
-            <version>11.0.2</version>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>jakarta.mail</artifactId>
+            <version>2.0.1</version>
+            <type>jar</type>
         </dependency>
         <dependency>
             <groupId>com.sun.mail</groupId>
             <artifactId>jakarta.mail</artifactId>
-            <version>1.6.7</version>
-            <type>jar</type>
+            <version>1.6.4</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>javax.activation</groupId>
+                    <artifactId>activation</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.activation</groupId>
+            <artifactId>jakarta.activation</artifactId>
+            <version>2.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.activation</groupId>
+            <artifactId>javax.activation-api</artifactId>
+            <version>1.2.0</version>
         </dependency>
     </dependencies>
     <build>
@@ -119,6 +107,7 @@
                 <version>0.0.6</version>
                 <configuration>
                     <options>
+                        <option>--add-exports=jakarta.activation/com.sun.activation.registries=ALL-UNNAMED</option>
                         <option>--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix</option>
                         <option>--add-exports=javafx.controls/com.sun.javafx.scene.control=com.jfoenix</option>
                         <option>--add-exports=javafx.base/com.sun.javafx.binding=com.jfoenix</option>
@@ -126,7 +115,8 @@
                         <option>--add-exports=javafx.base/com.sun.javafx.event=com.jfoenix</option>
                         <option>--add-opens=java.base/java.lang.reflect=com.jfoenix</option>
                         <option>--add-opens=javafx.base/javafx.beans.binding=ALL-UNNAMED</option>
-                        <option>--add-opens=javafx.graphics/javafx.scene=org.controlsfx.controls</option> 
+                        <option>--add-opens=javafx.graphics/javafx.scene=org.controlsfx.controls</option>
+
                         <option>--add-modules=javafx.swing</option> 
                     </options>
                     <mainClass>cr.ac.una.restuna.App</mainClass>
@@ -143,6 +133,7 @@
                         <id>debug</id>
                         <configuration>
                             <options>
+                                <option>--add-exports=jakarta.activation/com.sun.activation.registries=ALL-UNNAMED</option>
                                 <option>--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix</option>
                                 <option>--add-exports=javafx.controls/com.sun.javafx.scene.control=com.jfoenix</option>
                                 <option>--add-exports=javafx.base/com.sun.javafx.binding=com.jfoenix</option>
@@ -161,6 +152,7 @@
                         <id>ide-debug</id>
                         <configuration>
                             <options>
+                                <option>--add-exports=jakarta.activation/com.sun.activation.registries=ALL-UNNAMED</option>
                                 <option>--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix</option>
                                 <option>--add-exports=javafx.controls/com.sun.javafx.scene.control=com.jfoenix</option>
                                 <option>--add-exports=javafx.base/com.sun.javafx.binding=com.jfoenix</option>
